monitor/prometheus/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-prometheus
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-alertmanager
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /alertmanager
        pathType: Prefix
        backend:
          service:
            name: alertmanager
            port:
              number: 9093
